manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "kube1-bebc"
    labels:
        app: "kube1-bebc"
spec:
    type: ClusterIP
    ports:
    - port: 7000
      targetPort: 7000
      protocol: TCP
      name: http
    selector:
        app: "kube1-bebc"
